test/tests/stages/18_structures/invalid_types/incompatible_types/branch_mismatch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[45]:
  struct
  identifier(s1)
  {
  int
  identifier(a)
  ;
  }
  ;
  struct
  identifier(s2)
  {
  int
  identifier(b)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s1)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  struct
  identifier(s2)
  identifier(y)
  =
  {
  const int(2)
  }
  ;
  const int(1)
  ?
  identifier(x)
  :
  identifier(y)
  ;
  }
